--- a/AutomobileWebApp/AutomobileWebApp.csproj
+++ b/AutomobileWebApp/AutomobileWebApp.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AutomobileLibrary\AutomobileLibrary.csproj" />
   </ItemGroup>
 
